; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/widgets/extr_menu_input_bind_dialog.c_menu_input_key_bind_custom_bind_keyboard_cb.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/widgets/extr_menu_input_bind_dialog.c_menu_input_key_bind_custom_bind_keyboard_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i64, i64, i32, i32, %struct.TYPE_7__*, %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i32 }
%struct.TYPE_8__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32, i32 }

@menu_input_binds = common dso_local global %struct.TYPE_9__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @menu_input_key_bind_custom_bind_keyboard_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @menu_input_key_bind_custom_bind_keyboard_cb(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_8__*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call %struct.TYPE_8__* (...) @config_get_ptr()
  store %struct.TYPE_8__* %6, %struct.TYPE_8__** %5, align 8
  %7 = load i32, i32* %4, align 4
  store i32 %7, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @menu_input_binds, i32 0, i32 5, i32 0), align 8
  %8 = load %struct.TYPE_7__*, %struct.TYPE_7__** getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @menu_input_binds, i32 0, i32 4), align 8
  %9 = bitcast %struct.TYPE_7__* %8 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %9, i8* align 8 bitcast (%struct.TYPE_7__* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @menu_input_binds, i32 0, i32 5) to i8*), i64 4, i1 false)
  %10 = load i64, i64* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @menu_input_binds, i32 0, i32 0), align 8
  %11 = add nsw i64 %10, 1
  store i64 %11, i64* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @menu_input_binds, i32 0, i32 0), align 8
  %12 = load %struct.TYPE_7__*, %struct.TYPE_7__** getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @menu_input_binds, i32 0, i32 4), align 8
  %13 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %12, i32 1
  store %struct.TYPE_7__* %13, %struct.TYPE_7__** getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @menu_input_binds, i32 0, i32 4), align 8
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @menu_input_binds, i32 0, i32 4), align 8
  %15 = bitcast %struct.TYPE_7__* %14 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 bitcast (%struct.TYPE_7__* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @menu_input_binds, i32 0, i32 5) to i8*), i8* align 4 %15, i64 4, i1 false)
  %16 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %17 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @rarch_timer_begin_new_time(i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @menu_input_binds, i32 0, i32 3), i32 %19)
  %21 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %22 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @rarch_timer_begin_new_time(i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @menu_input_binds, i32 0, i32 2), i32 %24)
  %26 = load i64, i64* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @menu_input_binds, i32 0, i32 0), align 8
  %27 = load i64, i64* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @menu_input_binds, i32 0, i32 1), align 8
  %28 = icmp sle i64 %26, %27
  %29 = zext i1 %28 to i32
  ret i32 %29
}

declare dso_local %struct.TYPE_8__* @config_get_ptr(...) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @rarch_timer_begin_new_time(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
